--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@theguild/remark-mermaid": "^0.2.0",
+    "@theguild/remark-npm2yarn": "^0.3.3",
+    "better-react-mathjax": "2.0.4-beta1",
+    "next": "15.1.6",
+    "nextra": "^4.1.1",
+    "nextra-theme-docs": "^4.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
