--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +16,7 @@
     "next": "15.1.6",
     "nextra": "^4.1.1",
     "nextra-theme-docs": "^4.1.1",
+    "pagefind": "^1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
